Feita Bean de registro

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -50,8 +50,8 @@
 
                             <a class="dropdown-toggle nav-link js-scroll-trigger" data-toggle="dropdown" href="#">Perfil</a>
                             <ul class="dropdown-menu bg-dark">
-                                <li><a class="nav-item" href="login.xhtml">Login</a></li>
-                                <li><a class="nav-item" href="registro.xhtml">Registrar</a></li> 
+                                <li><a class="nav-item nav-link" href="login.xhtml">Login</a></li>
+                                <li><a class="nav-item nav-link" href="registro.xhtml">Registrar</a></li> 
                             </ul>
                         </li>
 
