--- a/web/registro.xhtml
+++ b/web/registro.xhtml
@@ -7,9 +7,8 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -29,47 +28,50 @@ and open the template in the editor.
     <body class="bg-dark">
         <div class="container">
             <div class="card card-register mx-auto mt-5">
-                <div class="card-header">Register an Account</div>
+                <div class="card-header">Registre uma conta</div>
                 <div class="card-body">
-                    <form>
+                    <h:form>
+                        <h:messages/>
                         <div class="form-group">
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <label for="exampleInputName">First name</label>
-                                    <input class="form-control" id="exampleInputName" type="text" 
-                                           aria-describedby="nameHelp" placeholder="Enter first name"/>
+                                    <label for="exampleInputName">Primeiro nome</label>
+                                    <h:inputText class="form-control" id="exampleInputName" 
+                                                 pt:placeholder="Entre com o primeiro nome"
+                                                 value="#{registroMB.usuario.nome}"/>
+
                                 </div>
                                 <div class="col-md-6">
-                                    <label for="exampleInputLastName">Last name</label>
-                                    <input class="form-control" id="exampleInputLastName" type="text" 
-                                           aria-describedby="nameHelp" placeholder="Enter last name"/>
+                                     <h:graphicImage url="img/logo_sombra.png" width="300px"/>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input class="form-control" id="exampleInputEmail1" 
-                                   type="email" aria-describedby="emailHelp" placeholder="Enter email"/>
+                            <label for="exampleInputEmail1">Email</label>
+                            <h:inputText class="form-control" id="exampleInputEmail1" pt:placeholder="Entre com email"
+                                         value="#{registroMB.usuario.email}" validatorMessage="E-mail incorreto">
+                                <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+                            </h:inputText>
                         </div>
                         <div class="form-group">
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <label for="exampleInputPassword1">Password</label>
-                                    <input class="form-control" id="exampleInputPassword1" 
-                                           type="password" placeholder="Password"/>
+                                    <label for="exampleInputPassword1">Senha</label>
+                                    <h:inputSecret class="form-control" id="exampleInputPassword1"
+                                                   pt:placeholder="Senha" value="#{registroMB.usuario.senha}"/>
                                 </div>
                                 <div class="col-md-6">
-                                    <label for="exampleConfirmPassword">Confirm password</label>
-                                    <input class="form-control" id="exampleConfirmPassword" 
-                                           type="password" placeholder="Confirm password"/>
+                                    <label for="exampleConfirmPassword">Confirme a senha</label>
+                                    <h:inputSecret class="form-control" id="exampleConfirmPassword"
+                                                   pt:placeholder="Confirme a senha" value="#{registroMB.usuario.senha}"/>
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-primary btn-block" href="login.html">Register</a>
-                    </form>
+                        <h:commandLink class="btn btn-primary btn-block" action="#{registroMB.Registrar}">Registrar</h:commandLink>
+                    </h:form>
                     <div class="text-center">
-                        <a class="d-block small mt-3" href="login.html">Login Page</a>
-                        <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+                        <a class="d-block small mt-3" href="login.xhtml">Página de login</a>
+                        <a class="d-block small" href="forgot-password.html">Esqueceu sua senha?</a>
                     </div>
                 </div>
             </div>
