--- a/web/Restrito/Restrito.xhtml
+++ b/web/Restrito/Restrito.xhtml
@@ -5,12 +5,18 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
         <div>TODO write content</div>
+        <h:form>
+            <h:commandLink class="btn btn-primary btn-block" action="#{login.logout()}">Logout</h:commandLink>
+        </h:form>
     </body>
 </html>
