Adicionados formularios e nova pagina principal da area do usuario

--- a/web/Restrito/MinhaArea.xhtml
+++ b/web/Restrito/MinhaArea.xhtml
@@ -25,14 +25,14 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.xhtml">Inicio</a>
+    <a class="navbar-brand" href="MinhaArea.xhtml">Inicio</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Usuario">
-          <a class="nav-link" href="index.xhtml">
+          <a class="nav-link" href="MinhaArea.xhtml">
             <span class="nav-link-text">Usuario</span>
           </a>
         </li>
@@ -99,14 +99,14 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.xhtml">Usuario</a>
+          <a href="MinhaArea.xhtml">Usuario</a>
         </li>
         <li class="breadcrumb-item active">Minha Área</li>
       </ol>
 	 </div>
 	 
 
-	  <a href="MinhaArea.xhtml">Usuario area</a>
+	  
 	  
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
