--- a/web/Restrito/alterarCardapio.xhtml
+++ b/web/Restrito/alterarCardapio.xhtml
@@ -23,7 +23,7 @@
 <body class="bg-dark">
   <div class="container">
     <div class="card card-register mx-auto mt-5">
-      <div class="card-header">Registrar Cardapio</div>
+      <div class="card-header">Atualizar Cardapio</div>
       <div class="card-body">
 	  
           <h:form>
@@ -64,7 +64,7 @@
           </div>              
                           
 
-       <h:commandLink class="btn btn-primary btn-block" action="#">Registrar</h:commandLink>
+       <h:commandLink class="btn btn-primary btn-block" action="#">Atualizar</h:commandLink>
        <a class="btn btn-primary btn-block" href="Cardapio.xhtml">Voltar</a>
 	</h:form>
 
