--- a/web/Restrito/alterarFoodTruck.xhtml
+++ b/web/Restrito/alterarFoodTruck.xhtml
@@ -23,7 +23,7 @@
 <body class="bg-dark">
   <div class="container">
     <div class="card card-register mx-auto mt-5">
-      <div class="card-header">Registrar Food Truck</div>
+      <div class="card-header">Atualizar Food Truck</div>
       <div class="card-body">
 	  
           <h:form>
@@ -108,10 +108,9 @@
           </div> 
               </div>              
 
-       <h:commandLink class="btn btn-primary btn-block" action="#">Registrar</h:commandLink>
+       <h:commandLink class="btn btn-primary btn-block" action="#">Atualizar</h:commandLink>
        <a class="btn btn-primary btn-block" href="FoodTruck.xhtml">Voltar</a>
 	</h:form>
-
 
 		
       </div>
