--- a/web/Restrito/Alimento.xhtml
+++ b/web/Restrito/Alimento.xhtml
@@ -25,14 +25,14 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.xhtml">Inicio</a>
+    <a class="navbar-brand" href="MinhaArea.xhtml">Inicio</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Usuario">
-          <a class="nav-link" href="index.xhtml">
+          <a class="nav-link" href="MinhaArea.xhtml">
             <span class="nav-link-text">Usuario</span>
           </a>
         </li>
@@ -72,9 +72,6 @@
             <li>
               <a href="Alimento.xhtml">Adicionar Alimento de Venda</a>
             </li>
-            <li>
-              <a href="MinhaPosicao.xhtml">Minha Posição</a>
-            </li>
           </ul>
         </li>
 		
@@ -87,7 +84,9 @@
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-
+	          <li class="nav-item">
+          <a class="nav-link" data-toggle="modal" data-target="#">Minha Posição</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
@@ -100,22 +99,27 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.xhtml">Usuario</a>
+          <a href="MinhaArea.xhtml">Usuario</a>
         </li>
         <li class="breadcrumb-item active">Alimento</li>
       </ol>
 	 </div>
 	 
-
+	 
+	 
 	  
 	  
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
     <footer class="sticky-footer">
       <div class="container">
-        <div class="text-center">
+	  
+	          <div class="text-center">
           <small>Copyright © Your Website 2017</small>
         </div>
+    <a class="btn btn-primary" href="registrarAlimento.xhtml">Registrar Alimento</a>
+    <a class="btn btn-primary" href="alterarAlimento.xhtml">Atualizar Alimento</a>
+
       </div>
     </footer>
     <!-- Scroll to Top Button-->
