--- a/web/registro.xhtml
+++ b/web/registro.xhtml
@@ -63,7 +63,7 @@ and open the template in the editor.
                                 <div class="col-md-6">
                                     <label for="exampleConfirmPassword">Confirme a senha</label>
                                     <h:inputSecret class="form-control" id="exampleConfirmPassword"
-                                                   pt:placeholder="Confirme a senha" value="#{registroMB.usuario.senha}"/>
+                                                   pt:placeholder="Confirme a senha" />
                                 </div>
                             </div>
                         </div>
