--- a/web/Restrito/MeusDados.xhtml
+++ b/web/Restrito/MeusDados.xhtml
@@ -20,6 +20,11 @@
         <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet"/>
         <!-- Custom styles for this template-->
         <link href="css/sb-admin.css" rel="stylesheet"/>
+        
+        
+        <f:metadata>
+            <f:viewAction action="#{dadosMB.carregaDados}"/>
+        </f:metadata>
     </head>
 
     <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -149,7 +154,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h:commandLink class="btn btn-primary btn-block" >Atualizar</h:commandLink>
+                            <h:commandLink class="btn btn-primary btn-block" action="#{dadosMB.atualiza}">Atualizar</h:commandLink>
                         </h:form>
                     </div>
                 </div>
