--- a/web/Restrito/MeusDados.xhtml
+++ b/web/Restrito/MeusDados.xhtml
@@ -30,14 +30,14 @@
     <body class="fixed-nav sticky-footer bg-dark" id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-            <a class="navbar-brand" href="MinhaArea.xhtml">Inicio</a>
+            <a class="navbar-brand" href="Restrito/index.xhtml">Inicio</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Usuario">
-                        <a class="nav-link" href="MinhaArea.xhtml">
+                        <a class="nav-link" href="Restrito/index.xhtml">
                             <span class="nav-link-text">Usuario</span>
                         </a>
                     </li>
@@ -77,9 +77,6 @@
                             <li>
                                 <a href="Alimento.xhtml">Adicionar Alimento de Venda</a>
                             </li>
-                            <li>
-                                <a href="MinhaPosicao.xhtml">Minha Posição</a>
-                            </li>
                         </ul>
                     </li>
 
@@ -92,7 +89,9 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-
+	<li class="nav-item">
+          <a class="nav-link" data-toggle="modal" data-target="MinhaPosicao.xhtml">Minha Posição</a>
+        </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
                             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
@@ -105,7 +104,7 @@
                 <!-- Breadcrumbs-->
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
-                        <a href="MinhaArea.xhtml">Usuario</a>
+                        <a href="Restrito/index.xhtml">Usuario</a>
                     </li>
                     <li class="breadcrumb-item active">Meus Dados</li>
                 </ol>
@@ -172,7 +171,7 @@
             <footer class="sticky-footer">
                 <div class="container">
                     <div class="text-center">
-                        <small>Copyright © Equipe FoundTruck 2017</small>
+                        <small>Copyright © FoundTruck 2017</small>
                     </div>
                 </div>
             </footer>
