--- a/web/Restrito/Cardapio.xhtml
+++ b/web/Restrito/Cardapio.xhtml
@@ -20,19 +20,23 @@
         <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet"/>
         <!-- Custom styles for this template-->
         <link href="css/sb-admin.css" rel="stylesheet"/>
+        
+                <f:metadata>
+                    <f:viewAction action="#{cardapioMB.dadosCardapio()}"/>
+        </f:metadata>
     </head>
 
     <body class="fixed-nav sticky-footer bg-dark" id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-            <a class="navbar-brand" href="MinhaArea.xhtml">Inicio</a>
+            <a class="navbar-brand" href="Restrito/index.xhtml">Inicio</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Usuario">
-                        <a class="nav-link" href="MinhaArea.xhtml">
+                        <a class="nav-link" href="Restrito/index.xhtml">
                             <span class="nav-link-text">Usuario</span>
                         </a>
                     </li>
@@ -72,9 +76,6 @@
                             <li>
                                 <a href="Alimento.xhtml">Adicionar Alimento de Venda</a>
                             </li>
-                            <li>
-                                <a class="nav-link" data-toggle="modal" data-target="#">Minha Posição</a>
-                            </li>
                         </ul>
                     </li>
 
@@ -87,7 +88,9 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-
+	<li class="nav-item">
+          <a class="nav-link" data-toggle="modal" data-target="MinhaPosicao.xhtml">Minha Posição</a>
+        </li>                    
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
                             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
@@ -100,7 +103,7 @@
                 <!-- Breadcrumbs-->
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
-                        <a href="MinhaArea.xhtml">Usuario</a>
+                        <a href="Restrito/index.xhtml">Usuario</a>
                     </li>
                     <li class="breadcrumb-item active">Cardápio</li>
                 </ol>
@@ -145,34 +148,15 @@
                                              >
                                 </h:inputText>
                             </div>
-                            <h:commandLink class="btn btn-primary btn-block" action="#{cardapioMB.Registrar}">Cadastrar</h:commandLink>
+                            <h:commandLink class="btn btn-primary btn-block" action="#{cardapioMB.registrar}"
+                                           rendered="#{cardapioMB.cardapio.nome_alimento eq ''}">Cadastrar</h:commandLink>
+                                           <h:commandLink class="btn btn-primary btn-block" action="#{cardapioMB.atualizar}" 
+                                           rendered="#{cardapioMB.cardapio.nome_alimento ne ''}">Atualizar</h:commandLink>
                         </h:form>
                     </div>
                 </div>
             </div>
 
-            <div class="container">
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <i class="fa fa-table"></i> Cardápio
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <h:dataTable class="table table-bordered" id="dataTable" cellspacing="0">
-                                <h:column>
-                                    <f:facet name="header">Nome</f:facet>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">Descrição</f:facet>
-                                </h:column>
-                                <h:column>
-                                    <f:facet name="header">Valor</f:facet>
-                                </h:column>
-                            </h:dataTable>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
             <!-- /.container-fluid-->
